CardComponent now accepting Card as input

--- a/src/app/modules/game/game.component.html
+++ b/src/app/modules/game/game.component.html
@@ -2,6 +2,6 @@
   game works!
 </p>
 
-<app-card *ngFor="let card of cardService.cards">
+<app-card *ngFor="let card of cardService.cards" [card]="card">
 
 </app-card>
