--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+* { box-sizing: border-box; }
+html, body { margin: 0; padding: 0; height: 100vh; width: 100vw; }
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 5px auto;
+  max-width: 290px;
+}
