--- a/src/app/modules/game/game.component.scss
+++ b/src/app/modules/game/game.component.scss
@@ -5,14 +5,15 @@
   border: 1px black solid;
   margin: 2.5px 2.5px;
   cursor: pointer;
-}
-.card:hover {
-  background: rgba(0, 0, 0, .1);
-  cursor: pointer;
-}
-.card.matched {
-  border-color: #CAE2BC;
-  cursor: default;
-  opacity: .4;
-  cursor: not-allowed;
+
+  &:hover {
+    background: rgba(0, 0, 0, .1);
+    cursor: pointer;
+  }
+
+  &.matched {
+    border-color: #CAE2BC;
+    opacity: .4;
+    cursor: not-allowed;
+  }
 }
