Shuffling was just broken, fixed

--- a/src/app/modules/game/game.component.html
+++ b/src/app/modules/game/game.component.html
@@ -2,7 +2,7 @@
           [card]="card"
           (flipped)="onFlipped($event)"
           [ngClass]="{ 'matched' : card.isMatched }"
-          order="card.order"
+          [ngStyle]="{ 'order': card.order }"
           class="card">
 </app-card>
 
