Fixed up CSS to be more SCSSY

--- a/src/app/modules/controls/controls.component.scss
+++ b/src/app/modules/controls/controls.component.scss
@@ -5,29 +5,31 @@
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
+
+  &-go {
+    background: #CAE2BC;
+  }
+  &-pause {
+    background: #F694C1;
+  }
+  &-reset {
+    background: #83C5E6;
+  }
+  &:hover {
+    font-weight: 700;
+  }
+  &-go:hover {
+    background: #B0BC98;
+  }
+  &-pause:hover {
+    background: #CA7A9E;
+  }
+  &-reset:hover {
+    background: #4EADDC;
+  }
 }
 
-.button-go {
-  background: #CAE2BC;
-}
-.button-pause {
-  background: #F694C1;
-}
-.button-reset {
-  background: #83C5E6;
-}
-.button:hover {
-  font-weight: 700;
-}
-.button-go:hover {
-  background: #B0BC98;
-}
-.button-pause:hover {
-  background: #CA7A9E;
-}
-.button-reset:hover {
-  background: #4EADDC;
-}
+
 .timer {
   font-family: monospace;
   font-weight: bold;
