--- a/src/app/modules/game/game.component.html
+++ b/src/app/modules/game/game.component.html
@@ -10,10 +10,9 @@
           [ngStyle]="{ 'order': card.order }"
           class="card">
 </app-card>
-<app-timer [timer]="timer">
-
-</app-timer>
-
+<div class="game-timer">
+  {{ timerService.getFullTimerString() }}
+</div>
 <app-modal [showModal]="showModal"
            [modalTitle]="modalTitle"
            [buttonSubmitText]="modalButtonSubmitText"
