Pause now working properly

--- a/src/app/modules/game/game.component.html
+++ b/src/app/modules/game/game.component.html
@@ -15,6 +15,7 @@
 </div>
 <app-modal [showModal]="showModal"
            [modalTitle]="modalTitle"
+           [modalContent]="modalContent"
            [buttonSubmitText]="modalButtonSubmitText"
            (submitted)="onModalSubmit($event)">
   <div *ngIf="won"
