--- a/src/app/modules/timer/timer.component.html
+++ b/src/app/modules/timer/timer.component.html
@@ -1,6 +1,3 @@
 <div class="game-timer">
-  <span>{{ timer.hour }}</span> :
-  <span>{{ timer.minute }}</span> :
-  <span>{{ timer.second }}</span> :
-  <span>{{ timer.millisecond }}</span> :
+  {{ timerString }}
 </div>
