--- a/src/app/modules/modal/modal.component.scss
+++ b/src/app/modules/modal/modal.component.scss
@@ -1,14 +1,4 @@
 
-.modal-wrapper {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .75);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
 .modal {
   z-index: 2;
   height: 500px;
@@ -22,33 +12,45 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-.modal-header, .modal-body, .modal-footer {
-  padding: 15px;
-}
-.modal-header, .modal-footer {
-  min-height: 60px;
-}
-.modal-header {
-  display: flex;
-  color: #666;
-  background: #F2F2F2;
-  justify-content: space-between;
-  align-items: center;
-}
-.modal-close {
-  cursor: pointer;
-}
-.modal-close:hover {
-  color: #F694C1
-}
-.modal-footer {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  background: #F2F2F2;
-}
-.modal-footer > .button {
-  flex: 0 1 20%;
-  margin-left: 15px;
+
+  &-wrapper {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .75);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  &-header, &-body, &-footer {
+    padding: 15px;
+  }
+
+  &-header, &-footer {
+    min-height: 60px;
+  }
+  &-header {
+    display: flex;
+    color: #666;
+    background: #F2F2F2;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &-close {
+    cursor: pointer;
+    &:hover {
+      color: #F694C1
+    }
+  }
+  &-footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background: #F2F2F2;
+  }
+  &-footer > .button {
+    flex: 0 1 20%;
+    margin-left: 15px;
+  }
 }
